# tree-sitter-groq

./: .gitignore  Cargo.toml  Package.swift  README.md  binding.gyp  bun.lockb  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: test.yml
bindings/c/: tree-sitter-groq.h  tree-sitter-groq.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_groq/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
corpus/: arrays.txt  expressions.txt  function-calls.txt  objects.txt  queries.txt  strings.txt
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  function-calls.txt  identifiers.txt  numbers.txt  objects.txt  pairs.txt  pipelines.txt  queries.txt  traversals.txt
