[package]
name = "tree-sitter-groq"
description = "GROQ grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "groq"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/juice49/tree-sitter-groq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.1"

[build-dependencies]
cc = "1.0.87"
